--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 <body>
     <div class="container">
         <div class="header">
+            <img src="app_icon.png" alt="Pure Noise App Icon" style="width: 80px; height: 80px; border-radius: 20px; margin-bottom: 20px;">
             <h1>Pure Noise</h1>
             <p>편안한 수면을 위한 백색소음 앱</p>
         </div>
@@ -171,7 +172,7 @@
         <div class="download-section">
             <h2>앱 다운로드</h2>
             <p>지금 바로 Pure Noise를 다운로드하고 편안한 수면을 경험해보세요.</p>
-            <a href="#" class="download-btn">Google Play Store</a>
+            <a href="https://play.google.com/store/apps/details?id=com.orbt.pure_noise_test" class="download-btn" target="_blank">Google Play Store</a>
             <a href="#" class="download-btn">App Store</a>
         </div>
         
@@ -180,6 +181,7 @@
             <p>문의사항이나 피드백이 있으시면 언제든 연락주세요.</p>
             <p><strong>개발자:</strong> Pure Noise Team</p>
             <p><strong>이메일:</strong> support@purenoise.app</p>
+            <p><a href="privacy-policy.html" style="color: #667eea; text-decoration: none;">개인정보처리방침</a></p>
         </div>
     </div>
 </body>
