Add Mind Code portfolio page with company information
- Create new /mindcode directory with complete portfolio website
- Add responsive HTML, CSS, and JavaScript files
- Include About Us section with company description
- Update contact information with mind.code09@gmail.com
- Add English navigation and content
- Include hero section, skills, projects, and contact form
- Update main index.html to include mindcode link

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>프로젝트</h2>
     <ul>
         <li><a href="/pure-noise-page/">Pure Noise Page</a></li>
+        <li><a href="/mindcode/">Mind Code - 개발자 포트폴리오</a></li>
     </ul>
 </body>
 </html> 
