Add Google site verification meta tag to mindcode page

--- a/mindcode/index.html
+++ b/mindcode/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="1bZiNrGXefaTRbGfgFWW5eRyc2M_R_BEFdeu9Oy9tKw" />
     <title>Mind Code - Creative App Development Company</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
